--- a/pom.xml
+++ b/pom.xml
@@ -53,19 +53,19 @@
             <version>0.5.0-SNAPSHOT</version>
         </dependency>
 
-        <!-- Dispense API -->
-        <dependency>
-            <groupId>tc.oc.occ</groupId>
-            <artifactId>Dispense</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
-        </dependency>
-
         <!-- OpenAPI Java Client -->
         <dependency>
             <groupId>tc.oc.occ</groupId>
             <artifactId>cobweb-java-client</artifactId>
             <version>v2</version>
             <scope>compile</scope>
+        </dependency>
+
+        <!-- PGM -->
+        <dependency>
+            <groupId>tc.oc.pgm</groupId>
+            <artifactId>core</artifactId>
+            <version>0.16-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
