--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,14 +1,20 @@
-# Cobweb API Settings
+# Cobweb API settings
 api:
   url: "http://localhost:4000" # Address where API is hosted
-  auth: "" # Authorization 
+  key: "" # Authorization
 
 # Name of the server (empty to use system env var)
-server-name: "" 
+server-name: ""
 
-# Series Settings
+# Series settings
 series:
-  id: 1
+  series-id: 1
   name: "Casual"
   service: "CASUAL"
+
+# Spider website page links (remove section to remove references)
+web:
+  match: "https://localhost:3000/matches/{matchId}"
+  profile: "https://localhost:3000/{name}"
+
   
