--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,13 @@
             <version>0.5.0-SNAPSHOT</version>
         </dependency>
 
+        <!-- Task Execution -->
+        <dependency>
+            <groupId>co.aikar</groupId>
+            <artifactId>taskchain-bukkit</artifactId>
+            <version>3.7.2</version>
+        </dependency>
+
         <!-- OpenAPI Java Client -->
         <dependency>
             <groupId>tc.oc.occ</groupId>
@@ -103,6 +110,10 @@
                         <relocation>
                             <pattern>co.aikar.commands</pattern>
                             <shadedPattern>tc.oc.occ.dewdrop.acf</shadedPattern>
+                        </relocation>
+                        <relocation>
+                            <pattern>co.aikar.taskchain</pattern>
+                            <shadedPattern>tc.oc.occ.dewdrop.taskchain</shadedPattern>
                         </relocation>
                     </relocations>
                     <createDependencyReducedPom>false</createDependencyReducedPom>
