Submit match stats on match end (#1)
* Submit match stats on match end

* Fix winner team color

* Fix number set field calls not being integers & run API calls asynchronously

* Use same shared chain for both maps and matches & send server message synchronously

* Adapt map tag retrieval to recent PGM changes

* Update MapData

* Update MatchData

* Send decimal damage values instead of integers

* Set participation duration and if it's primary or not

* Add /dewdrop stats command

* Update MatchData

* Create shared chain per PGM match & add retries to upsert map operation

* Update team color retrieval

* Update pom.xml

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,14 +1,17 @@
-# Cobweb API Settings
+# Cobweb API settings
 api:
   url: "http://localhost:4000" # Address where API is hosted
-  auth: "" # Authorization 
+  key: "" # Authorization
 
 # Name of the server (empty to use system env var)
-server-name: "" 
+server-name: ""
 
-# Series Settings
-series:
-  id: 1
-  name: "Casual"
-  service: "CASUAL"
+# Series id assigned to matches
+series-id: 1
+
+# Spider website page links (remove section to remove references)
+web:
+  match: "https://localhost:3000/matches/{matchId}"
+  profile: "https://localhost:3000/{name}"
+
   
