--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,10 @@
             <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
         </repository>
         <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
+        <repository>
             <id>aikar</id>
             <url>https://repo.aikar.co/content/groups/aikar/</url>
         </repository>
@@ -53,11 +57,11 @@
             <version>0.5.0-SNAPSHOT</version>
         </dependency>
 
-        <!-- Dispense API -->
+        <!-- Task Execution -->
         <dependency>
-            <groupId>tc.oc.occ</groupId>
-            <artifactId>Dispense</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <groupId>co.aikar</groupId>
+            <artifactId>taskchain-bukkit</artifactId>
+            <version>3.7.2</version>
         </dependency>
 
         <!-- OpenAPI Java Client -->
@@ -66,6 +70,14 @@
             <artifactId>cobweb-java-client</artifactId>
             <version>v2</version>
             <scope>compile</scope>
+        </dependency>
+
+        <!-- PGM -->
+        <dependency>
+            <groupId>tc.oc.pgm</groupId>
+            <artifactId>core</artifactId>
+            <version>0.16-SNAPSHOT</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
@@ -98,6 +110,10 @@
                         <relocation>
                             <pattern>co.aikar.commands</pattern>
                             <shadedPattern>tc.oc.occ.dewdrop.acf</shadedPattern>
+                        </relocation>
+                        <relocation>
+                            <pattern>co.aikar.taskchain</pattern>
+                            <shadedPattern>tc.oc.occ.dewdrop.taskchain</shadedPattern>
                         </relocation>
                     </relocations>
                     <createDependencyReducedPom>false</createDependencyReducedPom>
