--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,4 +3,4 @@ description: ${project.description}
 main: ${project.bukkit.main}
 version: ${project.version} (${git.commit.id.abbrev})
 author: ${project.author}
-depends: [MatchShare]
+depends: [PGM]
